# Local_LLM

./: .gitignore  Dockerfile  README.md  cmd.txt  dockerignore  entrypoint.sh  pyproject.toml  requirements.txt
src/chat/: app.py  configuration.py
